practica5/Sintactico.output
Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PRINCIPAL bloque

    3 $@2: %empty

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs sentencias FINBLOQUE

    5 $@3: %empty

    6 declar_variables_locales: VAR $@3 variables_locales PUNTOYCOMA
    7                         | %empty

    8 variables_locales: variables_locales cuerpo_declar_variables
    9                  | cuerpo_declar_variables

   10 cuerpo_declar_variables: tipo lista_variables PUNTOYCOMA
   11                        | error

   12 lista_variables: variable COMA lista_variables
   13                | variable error lista_variables
   14                | variable

   15 variable: IDENT

   16 declar_subprogs: declar_subprogs declar_subprog
   17                | %empty

   18 $@4: %empty

   19 declar_subprog: cabecera_subprograma $@4 INICIO sentencias FIN PUNTOYCOMA

   20 $@5: %empty

   21 $@6: %empty

   22 cabecera_subprograma: PROCEDIMIENTO IDENT $@5 PARIZQ lista_parametros PARDER $@6 PUNTOYCOMA
   23                     | PROCEDIMIENTO IDENT PUNTOYCOMA

   24 lista_parametros: parametro PUNTOYCOMA lista_parametros
   25                 | parametro error PUNTOYCOMA lista_parametros
   26                 | parametro

   27 parametro: lista_variables DOSP tipo

   28 $@7: %empty

   29 sentencias: $@7 sentencia sentencias
   30           | %empty

   31 sentencia: bloque
   32          | asignacion
   33          | si PUNTOYCOMA
   34          | mientras PUNTOYCOMA
   35          | entrada PUNTOYCOMA
   36          | salida PUNTOYCOMA
   37          | repetir_hasta PUNTOYCOMA
   38          | llamada_funcion PUNTOYCOMA
   39          | variable AVANRETR PUNTOYCOMA
   40          | DOLAR variable PUNTOYCOMA

   41 asignacion: variable ASIGNACION expresion PUNTOYCOMA

   42 si: SI PARIZQ expresion PARDER ENTONCES sentencia SINO sentencia
   43   | SI PARIZQ expresion PARDER ENTONCES sentencia

   44 mientras: MIENTRAS PARIZQ expresion PARDER sentencia

   45 entrada: LEER lista_variables

   46 salida: ESCRIBIR lista_expresiones_cad

   47 repetir_hasta: PARA variable DOSP ASIGNACION expresion HASTA expresion HACER INICIO sentencias FIN

   48 expresion: PARIZQ expresion PARDER
   49          | OPUNARIO expresion
   50          | SUMRES expresion
   51          | expresion OPBINARIO expresion
   52          | expresion OPOR expresion
   53          | expresion OPRELACIONAL expresion
   54          | expresion SUMRES expresion
   55          | expresion OPAND expresion
   56          | expresion OPBINLISTA expresion
   57          | expresion ARROBA expresion
   58          | expresion ARROBA expresion MASMAS expresion
   59          | variable
   60          | constante
   61          | CORIZQ agregado CORDER
   62          | error

   63 lista_expresiones: expresion COMA lista_expresiones
   64                  | expresion

   65 lista_expresiones_cad: exp_cad COMA lista_expresiones_cad
   66                      | exp_cad

   67 exp_cad: expresion
   68        | CONSTCADENA

   69 constante: CONSTENTERA
   70          | CONSTLOGICA
   71          | CONSTREAL
   72          | CONSTCARACTER

   73 $@8: %empty

   74 llamada_funcion: IDENT PARIZQ $@8 lista_expresiones PARDER
   75                | IDENT PARIZQ PARDER

   76 agregado: agregado_enteros
   77         | agregado_reales
   78         | agregado_caracteres
   79         | agregado_booleanos
   80         | agregado_cadenas

   81 agregado_enteros: agregado_enteros COMA CONSTENTERA
   82                 | CONSTENTERA

   83 agregado_reales: agregado_reales COMA CONSTREAL
   84                | CONSTREAL

   85 agregado_caracteres: agregado_caracteres COMA CONSTCARACTER
   86                    | CONSTCARACTER

   87 agregado_booleanos: agregado_booleanos COMA CONSTLOGICA
   88                   | CONSTLOGICA

   89 agregado_cadenas: agregado_cadenas COMA CONSTCADENA
   90                 | CONSTCADENA

   91 tipo: LISTA TIPOBASICO
   92     | TIPOBASICO
   93     | error


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 11 13 25 62 93
    OPOR (258) 52
    OPAND (259) 55
    OPRELACIONAL (260) 53
    SUMRES (261) 50 54
    OPBINARIO (262) 51
    OPUNARIO (263) 49
    OPBINLISTA (264) 56
    ARROBA (265) 57 58
    MASMAS (266) 58
    ASIGNACION (267) 41 47
    CORIZQ (268) 61
    CORDER (269) 61
    TIPOBASICO (270) 91 92
    CONSTENTERA (271) 69 81 82
    CONSTLOGICA (272) 70 87 88
    CONSTREAL (273) 71 83 84
    CONSTCARACTER (274) 72 85 86
    CONSTCADENA (275) 68 89 90
    COMA (276) 12 63 65 81 83 85 87 89
    PARDER (277) 22 42 43 44 48 74 75
    PARIZQ (278) 22 42 43 44 48 74 75
    PUNTOYCOMA (279) 6 10 19 22 23 24 25 33 34 35 36 37 38 39 40 41
    INICIOBLOQUE (280) 4
    FINBLOQUE (281) 4
    VAR (282) 6
    SI (283) 42 43
    SINO (284) 42
    MIENTRAS (285) 44
    LEER (286) 45
    ESCRIBIR (287) 46
    HASTA (288) 47
    PRINCIPAL (289) 2
    PROCEDIMIENTO (290) 22 23
    DOSP (291) 27 47
    INICIO (292) 19 47
    FIN (293) 19 47
    ENTONCES (294) 42 43
    PARA (295) 47
    HACER (296) 47
    AVANRETR (297) 39
    DOLAR (298) 40
    LISTA (299) 91
    IDENT (300) 15 22 23 74 75


No terminales con las reglas donde aparecen

    $accept (46)
        on left: 0
    programa (47)
        on left: 2
        on right: 0
    $@1 (48)
        on left: 1
        on right: 2
    bloque (49)
        on left: 4
        on right: 2 31
    $@2 (50)
        on left: 3
        on right: 4
    declar_variables_locales (51)
        on left: 6 7
        on right: 4
    $@3 (52)
        on left: 5
        on right: 6
    variables_locales (53)
        on left: 8 9
        on right: 6 8
    cuerpo_declar_variables (54)
        on left: 10 11
        on right: 8 9
    lista_variables (55)
        on left: 12 13 14
        on right: 10 12 13 27 45
    variable (56)
        on left: 15
        on right: 12 13 14 39 40 41 47 59
    declar_subprogs (57)
        on left: 16 17
        on right: 4 16
    declar_subprog (58)
        on left: 19
        on right: 16
    $@4 (59)
        on left: 18
        on right: 19
    cabecera_subprograma (60)
        on left: 22 23
        on right: 19
    $@5 (61)
        on left: 20
        on right: 22
    $@6 (62)
        on left: 21
        on right: 22
    lista_parametros (63)
        on left: 24 25 26
        on right: 22 24 25
    parametro (64)
        on left: 27
        on right: 24 25 26
    sentencias (65)
        on left: 29 30
        on right: 4 19 29 47
    $@7 (66)
        on left: 28
        on right: 29
    sentencia (67)
        on left: 31 32 33 34 35 36 37 38 39 40
        on right: 29 42 43 44
    asignacion (68)
        on left: 41
        on right: 32
    si (69)
        on left: 42 43
        on right: 33
    mientras (70)
        on left: 44
        on right: 34
    entrada (71)
        on left: 45
        on right: 35
    salida (72)
        on left: 46
        on right: 36
    repetir_hasta (73)
        on left: 47
        on right: 37
    expresion (74)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 41 42 43 44 47 48 49 50 51 52 53 54 55 56 57 58 63 64 67
    lista_expresiones (75)
        on left: 63 64
        on right: 63 74
    lista_expresiones_cad (76)
        on left: 65 66
        on right: 46 65
    exp_cad (77)
        on left: 67 68
        on right: 65 66
    constante (78)
        on left: 69 70 71 72
        on right: 60
    llamada_funcion (79)
        on left: 74 75
        on right: 38
    $@8 (80)
        on left: 73
        on right: 74
    agregado (81)
        on left: 76 77 78 79 80
        on right: 61
    agregado_enteros (82)
        on left: 81 82
        on right: 76 81
    agregado_reales (83)
        on left: 83 84
        on right: 77 83
    agregado_caracteres (84)
        on left: 85 86
        on right: 78 85
    agregado_booleanos (85)
        on left: 87 88
        on right: 79 87
    agregado_cadenas (86)
        on left: 89 90
        on right: 80 89
    tipo (87)
        on left: 91 92 93
        on right: 10 27


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 1 ($@1)

    programa  ir al estado 1
    $@1       ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 programa: $@1 . PRINCIPAL bloque

    PRINCIPAL  desplazar e ir al estado 4


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    2 programa: $@1 PRINCIPAL . bloque

    INICIOBLOQUE  desplazar e ir al estado 5

    bloque  ir al estado 6


Estado 5

    4 bloque: INICIOBLOQUE . $@2 declar_variables_locales declar_subprogs sentencias FINBLOQUE

    $default  reduce usando la regla 3 ($@2)

    $@2  ir al estado 7


Estado 6

    2 programa: $@1 PRINCIPAL bloque .

    $default  reduce usando la regla 2 (programa)


Estado 7

    4 bloque: INICIOBLOQUE $@2 . declar_variables_locales declar_subprogs sentencias FINBLOQUE

    VAR  desplazar e ir al estado 8

    $default  reduce usando la regla 7 (declar_variables_locales)

    declar_variables_locales  ir al estado 9


Estado 8

    6 declar_variables_locales: VAR . $@3 variables_locales PUNTOYCOMA

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 10


Estado 9

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales . declar_subprogs sentencias FINBLOQUE

    $default  reduce usando la regla 17 (declar_subprogs)

    declar_subprogs  ir al estado 11


Estado 10

    6 declar_variables_locales: VAR $@3 . variables_locales PUNTOYCOMA

    error       desplazar e ir al estado 12
    TIPOBASICO  desplazar e ir al estado 13
    LISTA       desplazar e ir al estado 14

    variables_locales        ir al estado 15
    cuerpo_declar_variables  ir al estado 16
    tipo                     ir al estado 17


Estado 11

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs . sentencias FINBLOQUE
   16 declar_subprogs: declar_subprogs . declar_subprog

    PROCEDIMIENTO  desplazar e ir al estado 18

    FINBLOQUE  reduce usando la regla 30 (sentencias)
    $default   reduce usando la regla 28 ($@7)

    declar_subprog        ir al estado 19
    cabecera_subprograma  ir al estado 20
    sentencias            ir al estado 21
    $@7                   ir al estado 22


Estado 12

   11 cuerpo_declar_variables: error .
   93 tipo: error .

    IDENT     reduce usando la regla 93 (tipo)
    $default  reduce usando la regla 11 (cuerpo_declar_variables)


Estado 13

   92 tipo: TIPOBASICO .

    $default  reduce usando la regla 92 (tipo)


Estado 14

   91 tipo: LISTA . TIPOBASICO

    TIPOBASICO  desplazar e ir al estado 23


Estado 15

    6 declar_variables_locales: VAR $@3 variables_locales . PUNTOYCOMA
    8 variables_locales: variables_locales . cuerpo_declar_variables

    error       desplazar e ir al estado 12
    TIPOBASICO  desplazar e ir al estado 13
    PUNTOYCOMA  desplazar e ir al estado 24
    LISTA       desplazar e ir al estado 14

    cuerpo_declar_variables  ir al estado 25
    tipo                     ir al estado 17


Estado 16

    9 variables_locales: cuerpo_declar_variables .

    $default  reduce usando la regla 9 (variables_locales)


Estado 17

   10 cuerpo_declar_variables: tipo . lista_variables PUNTOYCOMA

    IDENT  desplazar e ir al estado 26

    lista_variables  ir al estado 27
    variable         ir al estado 28


Estado 18

   22 cabecera_subprograma: PROCEDIMIENTO . IDENT $@5 PARIZQ lista_parametros PARDER $@6 PUNTOYCOMA
   23                     | PROCEDIMIENTO . IDENT PUNTOYCOMA

    IDENT  desplazar e ir al estado 29


Estado 19

   16 declar_subprogs: declar_subprogs declar_subprog .

    $default  reduce usando la regla 16 (declar_subprogs)


Estado 20

   19 declar_subprog: cabecera_subprograma . $@4 INICIO sentencias FIN PUNTOYCOMA

    $default  reduce usando la regla 18 ($@4)

    $@4  ir al estado 30


Estado 21

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs sentencias . FINBLOQUE

    FINBLOQUE  desplazar e ir al estado 31


Estado 22

   29 sentencias: $@7 . sentencia sentencias

    INICIOBLOQUE  desplazar e ir al estado 5
    SI            desplazar e ir al estado 32
    MIENTRAS      desplazar e ir al estado 33
    LEER          desplazar e ir al estado 34
    ESCRIBIR      desplazar e ir al estado 35
    PARA          desplazar e ir al estado 36
    DOLAR         desplazar e ir al estado 37
    IDENT         desplazar e ir al estado 38

    bloque           ir al estado 39
    variable         ir al estado 40
    sentencia        ir al estado 41
    asignacion       ir al estado 42
    si               ir al estado 43
    mientras         ir al estado 44
    entrada          ir al estado 45
    salida           ir al estado 46
    repetir_hasta    ir al estado 47
    llamada_funcion  ir al estado 48


Estado 23

   91 tipo: LISTA TIPOBASICO .

    $default  reduce usando la regla 91 (tipo)


Estado 24

    6 declar_variables_locales: VAR $@3 variables_locales PUNTOYCOMA .

    $default  reduce usando la regla 6 (declar_variables_locales)


Estado 25

    8 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce usando la regla 8 (variables_locales)


Estado 26

   15 variable: IDENT .

    $default  reduce usando la regla 15 (variable)


Estado 27

   10 cuerpo_declar_variables: tipo lista_variables . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 49


Estado 28

   12 lista_variables: variable . COMA lista_variables
   13                | variable . error lista_variables
   14                | variable .

    error  desplazar e ir al estado 50
    COMA   desplazar e ir al estado 51

    PUNTOYCOMA  reduce usando la regla 14 (lista_variables)
    DOSP        reduce usando la regla 14 (lista_variables)


Estado 29

   22 cabecera_subprograma: PROCEDIMIENTO IDENT . $@5 PARIZQ lista_parametros PARDER $@6 PUNTOYCOMA
   23                     | PROCEDIMIENTO IDENT . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 52

    $default  reduce usando la regla 20 ($@5)

    $@5  ir al estado 53


Estado 30

   19 declar_subprog: cabecera_subprograma $@4 . INICIO sentencias FIN PUNTOYCOMA

    INICIO  desplazar e ir al estado 54


Estado 31

    4 bloque: INICIOBLOQUE $@2 declar_variables_locales declar_subprogs sentencias FINBLOQUE .

    $default  reduce usando la regla 4 (bloque)


Estado 32

   42 si: SI . PARIZQ expresion PARDER ENTONCES sentencia SINO sentencia
   43   | SI . PARIZQ expresion PARDER ENTONCES sentencia

    PARIZQ  desplazar e ir al estado 55


Estado 33

   44 mientras: MIENTRAS . PARIZQ expresion PARDER sentencia

    PARIZQ  desplazar e ir al estado 56


Estado 34

   45 entrada: LEER . lista_variables

    IDENT  desplazar e ir al estado 26

    lista_variables  ir al estado 57
    variable         ir al estado 28


Estado 35

   46 salida: ESCRIBIR . lista_expresiones_cad

    error          desplazar e ir al estado 58
    SUMRES         desplazar e ir al estado 59
    OPUNARIO       desplazar e ir al estado 60
    CORIZQ         desplazar e ir al estado 61
    CONSTENTERA    desplazar e ir al estado 62
    CONSTLOGICA    desplazar e ir al estado 63
    CONSTREAL      desplazar e ir al estado 64
    CONSTCARACTER  desplazar e ir al estado 65
    CONSTCADENA    desplazar e ir al estado 66
    PARIZQ         desplazar e ir al estado 67
    IDENT          desplazar e ir al estado 26

    variable               ir al estado 68
    expresion              ir al estado 69
    lista_expresiones_cad  ir al estado 70
    exp_cad                ir al estado 71
    constante              ir al estado 72


Estado 36

   47 repetir_hasta: PARA . variable DOSP ASIGNACION expresion HASTA expresion HACER INICIO sentencias FIN

    IDENT  desplazar e ir al estado 26

    variable  ir al estado 73


Estado 37

   40 sentencia: DOLAR . variable PUNTOYCOMA

    IDENT  desplazar e ir al estado 26

    variable  ir al estado 74


Estado 38

   15 variable: IDENT .
   74 llamada_funcion: IDENT . PARIZQ $@8 lista_expresiones PARDER
   75                | IDENT . PARIZQ PARDER

    PARIZQ  desplazar e ir al estado 75

    $default  reduce usando la regla 15 (variable)


Estado 39

   31 sentencia: bloque .

    $default  reduce usando la regla 31 (sentencia)


Estado 40

   39 sentencia: variable . AVANRETR PUNTOYCOMA
   41 asignacion: variable . ASIGNACION expresion PUNTOYCOMA

    ASIGNACION  desplazar e ir al estado 76
    AVANRETR    desplazar e ir al estado 77


Estado 41

   29 sentencias: $@7 sentencia . sentencias

    FINBLOQUE  reduce usando la regla 30 (sentencias)
    FIN        reduce usando la regla 30 (sentencias)
    $default   reduce usando la regla 28 ($@7)

    sentencias  ir al estado 78
    $@7         ir al estado 22


Estado 42

   32 sentencia: asignacion .

    $default  reduce usando la regla 32 (sentencia)


Estado 43

   33 sentencia: si . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 79


Estado 44

   34 sentencia: mientras . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 80


Estado 45

   35 sentencia: entrada . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 81


Estado 46

   36 sentencia: salida . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 82


Estado 47

   37 sentencia: repetir_hasta . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 83


Estado 48

   38 sentencia: llamada_funcion . PUNTOYCOMA

    PUNTOYCOMA  desplazar e ir al estado 84


Estado 49

   10 cuerpo_declar_variables: tipo lista_variables PUNTOYCOMA .

    $default  reduce usando la regla 10 (cuerpo_declar_variables)


Estado 50

   13 lista_variables: variable error . lista_variables

    IDENT  desplazar e ir al estado 26

    lista_variables  ir al estado 85
    variable         ir al estado 28


Estado 51

   12 lista_variables: variable COMA . lista_variables

    IDENT  desplazar e ir al estado 26

    lista_variables  ir al estado 86
    variable         ir al estado 28


Estado 52

   23 cabecera_subprograma: PROCEDIMIENTO IDENT PUNTOYCOMA .

    $default  reduce usando la regla 23 (cabecera_subprograma)


Estado 53

   22 cabecera_subprograma: PROCEDIMIENTO IDENT $@5 . PARIZQ lista_parametros PARDER $@6 PUNTOYCOMA

    PARIZQ  desplazar e ir al estado 87


Estado 54

   19 declar_subprog: cabecera_subprograma $@4 INICIO . sentencias FIN PUNTOYCOMA

    FIN       reduce usando la regla 30 (sentencias)
    $default  reduce usando la regla 28 ($@7)

    sentencias  ir al estado 88
    $@7         ir al estado 22


Estado 55

   42 si: SI PARIZQ . expresion PARDER ENTONCES sentencia SINO sentencia
   43   | SI PARIZQ . expresion PARDER ENTONCES sentencia

    error          desplazar e ir al estado 58
    SUMRES         desplazar e ir al estado 59
    OPUNARIO       desplazar e ir al estado 60
    CORIZQ         desplazar e ir al estado 61
    CONSTENTERA    desplazar e ir al estado 62
    CONSTLOGICA    desplazar e ir al estado 63
    CONSTREAL      desplazar e ir al estado 64
    CONSTCARACTER  desplazar e ir al estado 65
    PARIZQ         desplazar e ir al estado 67
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 68
    expresion  ir al estado 89
    constante  ir al estado 72


Estado 56

   44 mientras: MIENTRAS PARIZQ . expresion PARDER sentencia

    error          desplazar e ir al estado 58
    SUMRES         desplazar e ir al estado 59
    OPUNARIO       desplazar e ir al estado 60
    CORIZQ         desplazar e ir al estado 61
    CONSTENTERA    desplazar e ir al estado 62
    CONSTLOGICA    desplazar e ir al estado 63
    CONSTREAL      desplazar e ir al estado 64
    CONSTCARACTER  desplazar e ir al estado 65
    PARIZQ         desplazar e ir al estado 67
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 68
    expresion  ir al estado 90
    constante  ir al estado 72


Estado 57

   45 entrada: LEER lista_variables .

    $default  reduce usando la regla 45 (entrada)


Estado 58

   62 expresion: error .

    $default  reduce usando la regla 62 (expresion)


Estado 59

   50 expresion: SUMRES . expresion

    error          desplazar e ir al estado 58
    SUMRES         desplazar e ir al estado 59
    OPUNARIO       desplazar e ir al estado 60
    CORIZQ         desplazar e ir al estado 61
    CONSTENTERA    desplazar e ir al estado 62
    CONSTLOGICA    desplazar e ir al estado 63
    CONSTREAL      desplazar e ir al estado 64
    CONSTCARACTER  desplazar e ir al estado 65
    PARIZQ         desplazar e ir al estado 67
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 68
    expresion  ir al estado 91
    constante  ir al estado 72


Estado 60

   49 expresion: OPUNARIO . expresion

    error          desplazar e ir al estado 58
    SUMRES         desplazar e ir al estado 59
    OPUNARIO       desplazar e ir al estado 60
    CORIZQ         desplazar e ir al estado 61
    CONSTENTERA    desplazar e ir al estado 62
    CONSTLOGICA    desplazar e ir al estado 63
    CONSTREAL      desplazar e ir al estado 64
    CONSTCARACTER  desplazar e ir al estado 65
    PARIZQ         desplazar e ir al estado 67
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 68
    expresion  ir al estado 92
    constante  ir al estado 72


Estado 61

   61 expresion: CORIZQ . agregado CORDER

    CONSTENTERA    desplazar e ir al estado 93
    CONSTLOGICA    desplazar e ir al estado 94
    CONSTREAL      desplazar e ir al estado 95
    CONSTCARACTER  desplazar e ir al estado 96
    CONSTCADENA    desplazar e ir al estado 97

    agregado             ir al estado 98
    agregado_enteros     ir al estado 99
    agregado_reales      ir al estado 100
    agregado_caracteres  ir al estado 101
    agregado_booleanos   ir al estado 102
    agregado_cadenas     ir al estado 103


Estado 62

   69 constante: CONSTENTERA .

    $default  reduce usando la regla 69 (constante)


Estado 63

   70 constante: CONSTLOGICA .

    $default  reduce usando la regla 70 (constante)


Estado 64

   71 constante: CONSTREAL .

    $default  reduce usando la regla 71 (constante)


Estado 65

   72 constante: CONSTCARACTER .

    $default  reduce usando la regla 72 (constante)


Estado 66

   68 exp_cad: CONSTCADENA .

    $default  reduce usando la regla 68 (exp_cad)


Estado 67

   48 expresion: PARIZQ . expresion PARDER

    error          desplazar e ir al estado 58
    SUMRES         desplazar e ir al estado 59
    OPUNARIO       desplazar e ir al estado 60
    CORIZQ         desplazar e ir al estado 61
    CONSTENTERA    desplazar e ir al estado 62
    CONSTLOGICA    desplazar e ir al estado 63
    CONSTREAL      desplazar e ir al estado 64
    CONSTCARACTER  desplazar e ir al estado 65
    PARIZQ         desplazar e ir al estado 67
    IDENT          desplazar e ir al estado 26

    variable   ir al estado 68
    expresion  ir al estado 104
    constante  ir al estado 72


Estado 68

   59 expresion: variable .

    $default  reduce usando la regla 59 (expresion)


Estado 69
